--- a/pages/welcome/welcome.wxml
+++ b/pages/welcome/welcome.wxml
@@ -1,9 +1,8 @@
-
 <!--wxml文件是编辑小程序的骨架文件-->
 
 <!--view相当于容器 -->
 <view class="container">
-  <image class="user-avatar" src="/images/111.png"></image>
+  <image class="user-avatar" src="/images/mitu.png"></image>
   <text class="user-name">by 楞娃</text>
   <view class="moto-container">
     <text class="moto">开启小程序之旅</text>
