--- a/pages/welcome/welcome.wxml
+++ b/pages/welcome/welcome.wxml
@@ -5,7 +5,7 @@
 <view class="container">
   <image class="user-avatar" src="/images/mitu.png"></image>
   <text class="user-name">by 楞娃</text>
-  <view class="moto-container">
+  <view class="moto-container" bindtap="onTap">
     <text class="moto">开启小程序之旅</text>
   </view>
 </view>
