--- a/pages/posts/posts.wxml
+++ b/pages/posts/posts.wxml
@@ -12,7 +12,11 @@
     </swiper-item>
   </swiper>
   <block wx:for="{{posts_key}}" wx:for-item="item">
-    <!--is指定模版名称 data指代填充的元素，子元素名称-->
-    <template is="postItem" data="{{item}}" />
+    <view catchtap="onPostTap" data-postId="{{item.postid}}">
+    <!--利用新增加的view来响应消息-->
+
+      <!--is指定模版名称 data指代填充的元素，子元素名称-->
+      <template is="postItem" data="{{...item}}" />
+    </view>
   </block>
 </view>
