--- a/pages/posts/posts-detail/posts-detail.wxml
+++ b/pages/posts/posts-detail/posts-detail.wxml
@@ -1,1 +1,19 @@
-<text>这事文章详情</text>
+<view class="container">
+  <image class="head-image"src="{{headImgSrc}}"></image>
+  <image class="audio"src="/images/music/music.png"></image>
+  <view class="author-date">
+    <image class="avatar"src="{{avatar}}"></image>
+    <text class="author">{{author}}</text>
+    <text class="const-text">发表于</text>
+    <text class="date">{{dateTime}}</text>
+  </view>
+  <text class="title">{{title}}</text>
+  <view class="tool">
+    <view class="circle-img">
+      <image src="/images/icon/collection.png"></image>
+      <image class="share-img"src="/images/icon/share.png"></image>
+    </view>
+    <view class="horizon"></view>
+  </view>
+  <text class="detail">{{detail}}</text>
+</view>
