--- a/pages/posts/posts-detail/posts-detail.wxml
+++ b/pages/posts/posts-detail/posts-detail.wxml
@@ -1,8 +1,8 @@
 <view class="container">
-  <image class="head-image"src="{{postData.headImgSrc}}"></image>
-  <image class="audio"src="/images/music/music.png"></image>
+  <image class="head-image" src="{{postData.headImgSrc}}"></image>
+  <image class="audio" src="/images/music/music.png"></image>
   <view class="author-date">
-    <image class="avatar"src="{{postData.avatar}}"></image>
+    <image class="avatar" src="{{postData.avatar}}"></image>
     <text class="author">{{postData.author}}</text>
     <text class="const-text">发表于</text>
     <text class="date">{{postData.dateTime}}</text>
@@ -10,8 +10,9 @@
   <text class="title">{{postData.title}}</text>
   <view class="tool">
     <view class="circle-img">
-      <image src="/images/icon/collection.png"></image>
-      <image class="share-img"src="/images/icon/share.png"></image>
+      <image wx:if="{{collected}}" catchtap="onCollectionTap" src="/images/icon/collection.png"></image>
+      <image wx:else catchtap="onCollectionTap" src="/images/icon/collection-anti.png"></image>
+      <image catchtap="onShareTap" class="share-img" src="/images/icon/share.png"></image>
     </view>
     <view class="horizon"></view>
   </view>
