--- a/pages/posts/posts-detail/posts-detail.wxml
+++ b/pages/posts/posts-detail/posts-detail.wxml
@@ -1,6 +1,6 @@
 <view class="container">
   <image class="head-image" src="{{postData.headImgSrc}}"></image>
-  <image class="audio" src="/images/music/music.png"></image>
+  <image catchtap="onMusicTap" class="audio" src="{{isplayingMusic?'/images/music/music-stop.png':'/images/music/music.png'}}"></image>
   <view class="author-date">
     <image class="avatar" src="{{postData.avatar}}"></image>
     <text class="author">{{postData.author}}</text>
