--- a/pages/posts/posts.wxml
+++ b/pages/posts/posts.wxml
@@ -2,20 +2,18 @@
 <view>
   <swiper indicator-dots="true" autoplay="true">
     <swiper-item>
-      <image src="/images/iqiyi.png"></image>
+      <image src="/images/iqiyi.png" data-postId="0"></image>
     </swiper-item>
     <swiper-item>
-      <image src="/images/vr.png"></image>
+      <image src="/images/vr.png" data-postId="1"></image>
     </swiper-item>
     <swiper-item>
-      <image src="/images/wx.png"></image>
+      <image src="/images/wx.png" data-postId="2"></image>
     </swiper-item>
   </swiper>
   <block wx:for="{{posts_key}}" wx:for-item="item">
     <view catchtap="onPostTap" data-postId="{{item.postid}}">
-
       <!--利用新增加的view来响应消息-->
-
       <!--is指定模版名称 data指代填充的元素，子元素名称-->
       <template is="postItem" data="{{...item}}" />
     </view>
