修改星星样式已正常，其他样式还有问题。

--- a/pages/movies/stars/stars-template.wxml
+++ b/pages/movies/stars/stars-template.wxml
@@ -1,10 +1,12 @@
 <template name="starsTemplate">
-  <view>
-    <image src="/images/icon/star.png"></image>
-    <image src="/images/icon/star.png"></image>
-    <image src="/images/icon/star.png"></image>
-    <image src="/images/icon/star.png"></image>
-    <image src="/images/icon/star.png"></image>
-    <text>10.0</text>
+  <view class="stars-container">
+    <view class="stars">
+      <image src="/images/icon/star.png"></image>
+      <image src="/images/icon/star.png"></image>
+      <image src="/images/icon/star.png"></image>
+      <image src="/images/icon/star.png"></image>
+      <image src="/images/icon/star.png"></image>
+    </view>
+    <text class="stars-score">10.0</text>
   </view>
 </template>
