--- a/pages/movies/movie-list/movie-list-template.wxss
+++ b/pages/movies/movie-list/movie-list-template.wxss
@@ -6,10 +6,34 @@
   flex-direction: column;
 }
 
+.inner-containe{
+  margin: 0 auto 20rpx;
+}
 .movie-head {
   padding: 30rpx 20rpx 22rpx;
 }
 
 .slogan {
   font-size: 24rpx;
+}
+
+.more {
+  float: right;
+}
+
+.more-text {
+  vertical-align: middle;
+  margin-right: 10rpx;
+  color: #1f4ba5;
+}
+
+.more-img {
+  width: 9rpx;
+  height: 16rpx;
+  vertical-align: middle;
+}
+
+.movies-container {
+  display: flex;
+  flex-direction: row;
 }
