--- a/pages/movies/movies.wxml
+++ b/pages/movies/movies.wxml
@@ -1,12 +1,21 @@
 <import src="movie-list/movie-list-template.wxml" />
-<view class="container">
+<import src="movie-grid/movie-grid-template.wxml" />
+<view class="search">
+  <icon type="search" class="search-img" size="13" color="#405f80"></icon>
+  <input type="text" placeholder="西游降妖" placeholder-class="placeholder" bindfocus="onBindFocus" bindblur="onBindBlur" />
+  <image catchtap="onCancelImgTap" wx:if="{{searchPanelShow}}" class="xx-img" src="/images/icon/xx.png"></image>
+</view>
+<view class="container" wx:if="{{containerShow}}">
   <view class="movies-template">
-    <template is="movieListTemplate" data="{{...inTheaters}}"/>
+    <template is="movieListTemplate" data="{{...inTheaters}}" />
   </view>
   <view class="movies-template">
-    <template is="movieListTemplate" data="{{...commingSoon}}"/>
+    <template is="movieListTemplate" data="{{...commingSoon}}" />
   </view>
   <view class="movies-template">
-    <template is="movieListTemplate" data="{{...top250}}"/>
+    <template is="movieListTemplate" data="{{...top250}}" />
+  </view>
+  <view class="search-pannel" wx:if="{{searchPanelShow}}">
+    <template is="movieGridTemplate" data="{{...searchResult}}" />
   </view>
 </view>
